@@ -1,4 +1,4 @@
-ChmSee 1.3.0-rc2 2010--12-14
+ChmSee 1.3.0 2010-xx-xx
 ----------------------------
 * Use XDG Base Directory Specification for config and bookshelf cache
 * Starup splash screen removed
@@ -6,6 +6,7 @@ ChmSee 1.3.0-rc2 2010--12-14
 * Fix a bug which get homepage from #STRINGS
 * Change Prev&Next page hotkey from Alt to Control
 * Fix filter bug in cs_tree_view
+* Remove extracting progressbar
 
 ChmSee 1.2.0 2010-07-23
 -----------------------
